--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,29 +3,44 @@
    padding: 0;
 }
 #container {
-    
+    width: 1200px;
+    border: 1px solid black;
 }
 
 #header {
-    
+    width: 100%;
+    height: 200px;
+    background-color: yellow;
 }
 
 #menu {
-    
+    width: 100%;
+    height: 50px;
+    background-color: blue;
 }
 
 #content {
-    
+    width: 100%;
+    height: 800px;
+    background-color: blueviolet;
 }
 
 #content1 {
-    
+    width: 50%;
+    height: 500px;
+    background-color: greenyellow;
+    float: left;
 }
 
 #content2 {
-    
+    width: 50%;
+    height: 700px;
+    background-color: gray;
+    float: left;
 }
 
 #footer {
-    
+    width: 100%;
+    height: 50px;
+    background-color: black;
 }
