--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,12 +12,36 @@
     height: 200px;
     background-color: yellow;
 }
+#header img {
+    width: 100%;
+    height: 200px;
+}
 
 #menu {
     width: 100%;
     height: 50px;
-    background-color: blue;
+    background-color: black;
 }
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 15px 50px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #00FFFF;
+}
+
+.active {
+    background-color: #000;
+}
+
 
 #content {
     width: 100%;
