--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,7 +20,7 @@
 #menu {
     width: 100%;
     height: 50px;
-    background-color: black;
+    background-color:#000 ;
 }
 li {
     float: left;
@@ -36,10 +36,12 @@ li a {
 
 li a:hover:not(.active) {
     background-color: #00FFFF;
+    color: #000;
 }
 
 .active {
-    background-color: #000;
+    background-color: #00FFFF;
+    color: #000;
 }
 
 
