--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 * {
-   margin: auto;
-   padding: 0;
+    margin: auto;
+    padding: 0;
 }
 #container {
     width: 1200px;
@@ -10,7 +10,7 @@
 #header {
     width: 100%;
     height: 200px;
-    background-color: yellow;
+    border: 1px solid black;
 }
 #header img {
     width: 100%;
@@ -44,24 +44,23 @@ li a:hover:not(.active) {
     color: #000;
 }
 
-
 #content {
     width: 100%;
     height: 800px;
-    background-color: blueviolet;
+    border: 1px solid black;
 }
 
 #content1 {
     width: 50%;
     height: 500px;
-    background-color: greenyellow;
+    border: 1px solid black;
     float: left;
 }
 
 #content2 {
-    width: 50%;
+    width: 49%;
     height: 700px;
-    background-color: gray;
+    border: 1px solid black;
     float: left;
 }
 
