--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,16 +51,13 @@ li a:hover:not(.active) {
 }
 
 #content1 {
-    width: 50%;
-    height: 500px;
-    border: 1px solid black;
+    width: 68%;
     float: left;
+    padding: 10px;
 }
 
 #content2 {
-    width: 49%;
-    height: 700px;
-    border: 1px solid black;
+    width: 29%;
     float: left;
 }
 
@@ -68,4 +65,17 @@ li a:hover:not(.active) {
     width: 100%;
     height: 50px;
     background-color: black;
+}
+
+#content1 .parag {
+    font-family: arial;
+    font-size: 25px;
+    text-align: justify;
+}
+
+#content2 img {
+    width: 90%;
+    height: 200px;
+    margin-top: 100px;
+    margin-left: 20px;
 }
