--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,13 +4,11 @@
 }
 #container {
     width: 1200px;
-    border: 1px solid black;
 }
 
 #header {
     width: 100%;
     height: 200px;
-    border: 1px solid black;
 }
 #header img {
     width: 100%;
@@ -46,8 +44,6 @@ li a:hover:not(.active) {
 
 #content {
     width: 100%;
-    height: 800px;
-    border: 1px solid black;
 }
 
 #content1 {
@@ -73,9 +69,35 @@ li a:hover:not(.active) {
     text-align: justify;
 }
 
-#content2 img {
-    width: 90%;
-    height: 200px;
+#content2 .img1 {
+    width: 100%;
+    height: 185px;
     margin-top: 100px;
     margin-left: 20px;
+}
+
+#content2 .img2 {
+    width: 100%;
+    height: 195px;
+    margin-left: 20px;
+}
+
+#content3 img {
+    width: 55%;
+    height: 300px;
+    padding-left: 200px;
+    padding-bottom: 10px;
+}
+
+#content4 {
+    width: 100%;
+    padding: 15px;
+    font-family: arial;
+    font-size: 20px;
+}
+
+#content4 img {
+    width: 330px;
+    height: 250px;
+    padding-left: 45px;
 }
