--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,8 +68,15 @@ li a:hover:not(.active) {
 
 #footer {
     width: 100%;
-    height: 50px;
-    background-color: black;
+    clear: both;
+    height: 40px;
+    background-color: #000;
+}
+
+#footer p {
+    padding-top: 9px;
+    color: white;
+    text-align: center;
 }
 
 #content1 .parag {
