--- a/css/estilo.css
+++ b/css/estilo.css
@@ -117,3 +117,27 @@ li a:hover:not(.active) {
     height: 250px;
     padding-left: 45px;
 }
+.titulo {
+    width: 100%;
+    text-align: center;
+    margin-top: 60px;
+    
+}
+.promocao {
+    width: 150%;
+    text-align: center;
+    
+}
+.promocao .img {
+    margin: 45px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 200px; 
+}
+.promocao .img:hover {
+    border:1px solid #777;
+}
+.promocao .img img {
+    width: 100%;
+    height: 180px;
+}
