--- a/css/estilo.css
+++ b/css/estilo.css
@@ -66,9 +66,14 @@ li a:hover:not(.active) {
 }
 
 #content1 {
-    width: 100%;
+    width: 68%;
     float: left;
     padding: 10px;
+}
+
+#content2 {
+    width: 29%;
+    float: left;
 }
 
 #footer {
@@ -128,7 +133,7 @@ li a:hover:not(.active) {
     margin-top: 30px;  
 }
 .promocao {
-    width: 150%;
+    width: 100%;
     text-align: center;
 
 }
@@ -144,4 +149,10 @@ li a:hover:not(.active) {
 .promocao .img img {
     width: 100%;
     height: 180px;
+}
+
+#content5 {
+    width: 100%;
+    float: left;
+    padding: 10px;
 }
