--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,7 +5,8 @@
 
 body {
     background-image: url("img/wallpaper.png");
-    
+    font-family: Arial, sans-serif;
+    font-size: 12px;
 }
 
 #container {
@@ -23,7 +24,7 @@ body {
 
 #menu {
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color:#000 ;
 }
 
