--- a/css/estilo.css
+++ b/css/estilo.css
@@ -67,6 +67,7 @@ li a:hover:not(.active) {
     font-family: arial;
     font-size: 25px;
     text-align: justify;
+    padding: 20px;
 }
 #content #contato img {
     width: 35%;
@@ -89,7 +90,7 @@ li a:hover:not(.active) {
 }
 
 #footer {
-    width: 1200px;
+    width: 100%;
     clear: both;
     height: 40px;
     background-color: #000;
@@ -142,7 +143,7 @@ li a:hover:not(.active) {
 .titulo {
     width: 100%;
     text-align: center;
-    margin-top: 30px;  
+    margin: 30px;  
 }
 .promocao {
     width: 100%;
@@ -182,5 +183,38 @@ li a:hover:not(.active) {
     width: 700px;
     float: left;
     height: 350px;
+    
+}
+
+#content6 p {
+    font-family: arial;
+    font-size: 20px;
+}
+
+#content6 {
+    width: 1200px;
+}
+
+#content6 h1 {
+    text-align: center;
+    padding: 15px;
+}
+
+#content7 {
+    width: 45%;
+    font-family: arial;
+    font-size: 15px;
+    padding: 7px;
+    float: left;
+}
+
+#content8 {
+    width: 50%;
+    font-family: arial;
+    font-size: 15px;
+    float: left;
+}
+
+#contato {
     
 }
